--- a/plot_results.ipynb
+++ b/plot_results.ipynb
@@ -79,9 +79,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python [conda env:abm_sier_rnf]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-abm_sier_rnf-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -93,9 +93,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
